--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Рубаємо домашку # 4</h1>
+      <h1>Рубаємо домашку # 5</h1>
     </header>
     <main></main>
     <footer></footer>
@@ -16,5 +16,6 @@
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
     <script src="./js/task-4.js"></script>
+    <!-- <script src="./js/task-5.js"></script> -->
   </body>
 </html>
